compiler/w_session/tests/errors/out-of-scope.stderr
tests/errors/out-of-scope.w:5:5: error: identifier does not exist
    a
    ^
tests/errors/out-of-scope.w:1:12: error: type mismatch
fn main(): u32 {
           ^^^
